# flashcards-scheduler-ebisu

./: README.md  setup.cfg
.github/workflows/: docs.yml  tests.yml
docs/source/: conf.py  data_model.rst  index.rst  scheduler.rst
flashcards_scheduler_ebisu/: data_model.py  scheduler.py
tests/: test_scheduler.py
