[metadata]
name = flashcards-scheduler-ebisu
version = 0.0.1
author = Sara Zanzottera
description = Ebisu scheduler for `flashcards-core`
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/ebisu-flashcards/flashcards-scheduler-ebisu
project_urls =
    Homepage = https://github.com/ebisu-flashcards/flashcards-scheduler-ebisu
    Bug Tracker = https://github.com/ebisu-flashcards/flashcards-scheduler-ebisu/issues
    Documentation = https://ebisu-flashcards.github.io/flashcards-scheduler-ebisu/
    Changelog = https://github.com/ebisu-flashcards/flashcards-scheduler-ebisu/releases

keywords = ["flashcards", "srs", "study", "ebisu"]

classifiers =
    Development Status :: 4 - Beta,
    Intended Audience :: Developers,
    License :: OSI Approved :: AGPLv3 License,
    Programming Language :: Python,
    Programming Language :: Python :: 3,
    Programming Language :: Python :: 3 :: Only,
    Programming Language :: Python :: 3.6,
    Programming Language :: Python :: 3.7,
    Programming Language :: Python :: 3.8,
    Programming Language :: Python :: 3.9,

[options]
packages = find:
python_requires = >=3.6, <4
install_requires =
    flashcards-core@git+https://github.com/ebisu-flashcards/flashcards-core.git
    ebisu==2.1.0

[options.extras_require]
dev =
    pytest
    pytest-cov
    pytest-random-order
    pre-commit
    black
    flake8
    coveralls
    sphinx
    sphinx-rtd-theme
    m2r2  # Render included Markdown in Sphinx
    docutils  # Temporary fix for bullet points

[options.entry_points]
console_scripts =
    generate-redoc = flashcards_server.utils.generate_redoc:generate_redoc

[flake8]
max-line-length = 99
exclude = .git, __pycache__
max-complexity = 10
select=C,E,F,W
ignore=W503,W504

[tool:pytest]
log_cli = 1
log_cli_level = DEBUG
